...
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController title="My Events" id="BYZ-38-t0r" customClass="ViewEventsVC" customModule="Moment" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                            <color key="tintColor" systemColor="labelColor"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="addEventNavButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                    </navigationItem>
                    <connections>
                        <outlet property="addEventButton" destination="2hd-FU-2v3" id="rwx-KI-BdM"/>
                        <outlet property="countdownTableView" destination="Vld-bC-atL" id="IWA-6N-a5s"/>
                        <segue destination="FnR-JD-ttG" kind="presentation" identifier="showEventDetails" id="Cdj-pl-YDZ"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wFe-MB-doN" customClass="LargeTransparentTextField" customModule="Moment" customModuleProvider="target">
                                <rect key="frame" x="20" y="101" width="374" height="25"/>
                                <accessibility key="accessibilityConfiguration" identifier="eventNameInput">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="..." textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MTQ-Ux-o5B" customClass="LargeTransparentTextField" customModule="Moment" customModuleProvider="targe
                                <rect key="frame" x="20" y="109" width="374" height="25"/>
                                <accessibility key="accessibilityConfiguration" identifier="eventNameEditField"/>
                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" smartDashesType="no" smartInsertDeleteType="no" textContentType="name"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="omU-yq-cco" customClass="LargeButton" customModule="Moment" customModuleProvider="target">
                                <rect key="frame" x="67.5" y="381" width="279" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="saveEventButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="279" id="4er-ze-jBc"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ajQ-2t-6oh">
                                <rect key="frame" x="176.5" y="439" width="61" height="36"/>
                                <accessibility key="accessibilityConfiguration" identifier="removeEventButton">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
